--- a/css/style.css
+++ b/css/style.css
@@ -1088,6 +1088,8 @@ footer .decor-2 {
 		align-items: center;
 	}
 	footer .phone-mail_fr p {
+		display: flex;
+		align-items: center;
 		font-size: 14px;
 		line-height: 2;
 	}
